--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn -B package --file Spigot-API/pom.xml && mvn -B package --file Spigot-Server/pom.xml
+      run: mvn -B package --file pom.xml
