--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,14 @@
     <name>Spigot-Parent</name>
     <description>Parent project for all Spigot modules.</description>
     <url>https://hub.spigotmc.org/stash/projects/SPIGOT/repos/spigot</url>
-
+         
+         <repositories>
+                  <repository>
+                           <id>local</id>
+                           <url>file://</url>
+                  </repository>
+         </repositories>
+         
     <modules>
         <module>Spigot-Server</module>
         <module>Spigot-API</module>
