--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
          
          <repositories>
                   <repository>
-                           <id>local</id>
+                           <id>Localdependency</id>
                            <url>file://${basedir}/</url>
                   </repository>
          </repositories>
