--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -46,7 +46,7 @@
             <groupId>Localdependency</groupId>
             <artifactId>minecraft-server</artifactId>
             <version>${minecraft.version}-SNAPSHOT</version>
-            <systemPath>${project.basedir}/spigot-1.8.8.jar</systemPath>
+            <systemPath>${parent.relativePath}/spigot-1.8.8.jar</systemPath>
             <type>jar</type>
         </dependency>
         <dependency>
