--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -43,10 +43,8 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>Localdependency</groupId>
-            <artifactId>minecraft-server</artifactId>
-            <version>${minecraft.version}-SNAPSHOT</version>
-            <systemPath>${parent.relativePath}/spigot-1.8.8.jar</systemPath>
+            <groupId>org.spigotmc</groupId>
+            <version>spigot-1.8.8</version>
             <type>jar</type>
         </dependency>
         <dependency>
