--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -44,8 +44,10 @@
         </dependency>
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <version>spigot-1.8.8</version>
+            <artifactId>spigot-api</artifactId>
+            <version>${project.version}</version>
             <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>net.sf.jopt-simple</groupId>
