--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -43,7 +43,15 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.spigotmc</groupId>
+          <groupId>org.spigotmc</groupId>
+          <artifactId>minecraft-server</artifactId>
+          <version>${minecraft.version}-SNAPSHOT</version>
+          <type>jar</type>
+          <scope>system</scope>
+	 <systemPath>${project.basedir}/spigot-1.8.8.jar</systemPath>
+	 <optional>true</optional>
+        </dependency>
+        <dependency>
             <artifactId>spigot-api</artifactId>
             <version>${project.version}</version>
             <type>jar</type>
