--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -48,7 +48,7 @@
           <version>${minecraft.version}-SNAPSHOT</version>
           <type>jar</type>
           <scope>system</scope>
-	 <systemPath>${project.basedir}/spigot-1.8.8.jar</systemPath>
+	 <systemPath>${project.basedir}/../spigot-1.8.8.jar</systemPath>
 	 <optional>true</optional>
         </dependency>
         <dependency>
