--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -27,7 +27,12 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
     
-
+  <repositories>
+    <repository>
+    	<id>Localdependency</id>
+	<url>file://${basedir}/Localdependency</url>
+    </repository>
+  </repositories>
          
     <dependencies>
         <dependency>
