--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -48,12 +48,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-          <groupId>Local</groupId>
+          <groupId>Localdependency</groupId>
           <artifactId>minecraft-server</artifactId>
           <version>${minecraft.version}-SNAPSHOT</version>
           <type>jar</type>
           <scope>system</scope>
-	 <systemPath>${project.basedir}/spigot-1.8.8.jar</systemPath>
+	 <systemPath>${project.basedir}/minecraft-server/1.8.8/spigot-1.8.8.jar</systemPath>
 	 <optional>true</optional>
         </dependency>
         <dependency>
