--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -26,13 +26,6 @@
         <version>dev-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    
-  <repositories>
-    <repository>
-    	<id>Localdependency</id>
-	<url>file://${basedir}/Localdependency</url>
-    </repository>
-  </repositories>
          
     <dependencies>
         <dependency>
@@ -48,7 +41,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-          <groupId>Localdependency</groupId>
+          <groupId>org.spigotmc</groupId>
           <artifactId>minecraft-server</artifactId>
           <version>${minecraft.version}-SNAPSHOT</version>
           <type>jar</type>
