--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,13 @@
     <name>Spigot-Parent</name>
     <description>Parent project for all Spigot modules.</description>
     <url>https://hub.spigotmc.org/stash/projects/SPIGOT/repos/spigot</url>
+
+  <repositories>
+    <repository>
+    	<id>Localdependency</id>
+	    <url>file://${basedir}/Localdependency</url>
+	</repository>
+  </repositories>
                   
     <modules>
         <module>Spigot-Server</module>
