--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -41,7 +41,7 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-          <groupId>org.spigotmc</groupId>
+          <groupId>Localdependency</groupId>
           <artifactId>minecraft-server</artifactId>
           <version>${minecraft.version}-SNAPSHOT</version>
           <type>jar</type>
