--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -46,6 +46,8 @@
           <version>1.8.8</version>
           <type>jar</type>
           <scope>system</scope>
+          <systemPath>${basedir}/Localdependency/minecraft-server/1.8.8/spigot-1.8.8.jar</systemPath>
+
         </dependency>
         <dependency>
             <artifactId>spigot-api</artifactId>
