--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -46,7 +46,7 @@
           <version>1.8.8</version>
           <type>jar</type>
           <scope>system</scope>
-          <systemPath>file://${basedir}/minecraft-server/1.8.8/spigot-1.8.8.jar</systemPath>
+          <systemPath>${basedir}/minecraft-server/1.8.8/spigot-1.8.8.jar</systemPath>
 
         </dependency>
         <dependency>
