--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -40,15 +40,16 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-          <groupId>Localdependency</groupId>
-          <artifactId>minecraft-server</artifactId>
-          <version>1.8.8</version>
-          <type>jar</type>
-          <scope>system</scope>
-          <systemPath>${basedir}/minecraft-server/1.8.8/spigot-1.8.8.jar</systemPath>
 
+
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>minecraft-server</artifactId>
+            <version>${minecraft.version}-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
+
         <dependency>
             <artifactId>spigot-api</artifactId>
             <version>${project.version}</version>
