--- a/Spigot-Server/pom.xml
+++ b/Spigot-Server/pom.xml
@@ -47,7 +47,7 @@
             <artifactId>minecraft-server</artifactId>
             <version>${minecraft.version}-SNAPSHOT</version>
             <type>jar</type>
-            <scope>compile</scope>
+            <scope>system</scope>
 	    <systemPath>${project.basedir}/Localdependency/org/spigotmc/spigot-1.8.8-R0.1-SNAPSHOT.jar</systemPath>
         </dependency>
 
