--- a/Spigot/Spigot-Server/pom.xml
+++ b/Spigot/Spigot-Server/pom.xml
@@ -42,13 +42,13 @@
         </dependency>
 
 
+
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>minecraft-server</artifactId>
             <version>${minecraft.version}-SNAPSHOT</version>
             <type>jar</type>
-            <scope>system</scope>
-	    <systemPath>${project.basedir}/Localdependency/org/spigotmc/spigot-1.8.8-R0.1-SNAPSHOT.jar</systemPath>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
